tested assignment, made some adjustments concerning the relations. added the session insight endpoint to session controller.